create and style result section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/b50f6abfd1.js" crossorigin="anonymous"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
   </head>
   <body>
     <main>
@@ -15,6 +18,41 @@
           <i class="fa-solid fa-magnifying-glass"></i>
         </button>
       </form>
+
+      <section class="result">
+        <figure class="name">
+          <figcaption>London</figcaption>
+          <img src="https://flagsapi.com/GB/shiny/32.png" alt="flag" />
+        </figure>
+
+        <figure class="temperature">
+          <img src="https://openweathermap.org/img/wn/10d@4x.png" alt="" />
+          <figcaption>
+            <span>31</span>
+            <sup>o</sup>
+          </figcaption>
+        </figure>
+
+        <p class="description">Overcast clouds</p>
+
+        <ul>
+          <li>
+            <span>Clouds</span>
+            <i class="fa-solid fa-cloud"></i>
+            <span>98</span>%
+          </li>
+          <li>
+            <span>Humidity</span>
+            <i class="fa-solid fa-droplet"></i>
+            <span>55</span>%
+          </li>
+          <li>
+            <span>Pressure</span>
+            <i class="fa-solid fa-gauge"></i>
+            <span>1001</span>hPa
+          </li>
+        </ul>
+      </section>
     </main>
 
     <script type="module" src="app.js"></script>
