--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
       <section class="result">
         <figure class="name" id="city">
-          <figcaption>London</figcaption>
-          <img src="https://flagsapi.com/GB/shiny/32.png" alt="flag" />
+          <figcaption>Bangladesh</figcaption>
+          <img src="https://flagsapi.com/BD/shiny/32.png" alt="flag" />
         </figure>
 
         <figure class="temperature" id="temperature">
@@ -53,6 +53,7 @@
           </li>
         </ul>
       </section>
+      <div id="loading" class="hidden"></div>
     </main>
 
     <script type="module" src="app.js"></script>
